--- a/CometTailSimulator/CometTailSimulator/CometTailSimulator.csproj
+++ b/CometTailSimulator/CometTailSimulator/CometTailSimulator.csproj
@@ -46,6 +46,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Classes\Constants.cs" />
+    <Compile Include="Classes\DataManager.cs" />
+    <Compile Include="Classes\DataModel.cs" />
     <Compile Include="Classes\Particle.cs" />
     <Compile Include="Classes\PixelParticle.cs" />
     <Compile Include="Classes\Velocity.cs" />
