Simulation Manager started
All other classes finished and waiting for the first tests
successful implementation of the exponential law
improved system for creating new layer

--- a/CometTailSimulator/CometTailSimulator/CometTailSimulator.csproj
+++ b/CometTailSimulator/CometTailSimulator/CometTailSimulator.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Classes\DataModelComet.cs" />
     <Compile Include="Classes\Particle.cs" />
     <Compile Include="Classes\PixelParticle.cs" />
+    <Compile Include="Classes\SimulationManager.cs" />
     <Compile Include="Classes\Velocity.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
