--- a/CometTailSimulator/CometTailSimulator/CometTailSimulator.csproj
+++ b/CometTailSimulator/CometTailSimulator/CometTailSimulator.csproj
@@ -51,7 +51,6 @@
     <Compile Include="Classes\DataModel.cs" />
     <Compile Include="Classes\DataModelComet.cs" />
     <Compile Include="Classes\Particle.cs" />
-    <Compile Include="Classes\PixelParticle.cs" />
     <Compile Include="Classes\SimulationManager.cs" />
     <Compile Include="Classes\Velocity.cs" />
     <Compile Include="Form1.cs">
@@ -87,8 +86,6 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Interfaces\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
